12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (IOMETER2 - 2005.mm.dd):
==================================

- Applied patches:
   - #1184764 : iometer-2004.07.30-post.Ming013BlkGetSize64.patch by
     Ming Zhang (Tiny patch that corrects the BLKGETSIZE64 prototype
     definition).
   - #1184759 : iometer-2004.07.30-post.Ming012CpuAffinitityOffByDefault.patch
     by Ming Zhang (Tiny patch that switches off the CPU affinity
     support by default).
   - #1184758 : iometer-2004.07.30-post.Ming011SolarisWarnings.patch
     by Ming Zhang (Small patch that gets rid of some compiler warnings
     on Solaris).
   - #1184741 : iometer-2004.07.30-post.Henry002Ia64LinuxAndDdkCleanup.patch
     by Henryx W. Tieman (Does some cleanup on the Windows/IA64 build
     using the DDK and brings basic support for a Linux/IA64 port).
   - #1184731 : iometer-2004.07.30-post.Ming010CpuAffinity.patch by
     Ming Zhang (adds CPU affinity support for Linux and Windows).
   - #1184707 : iometer-2004.07.30-post.Ming009SysLogSupport.patch by
     Ming Zhang (adds syslog support/reporting for Linux and Solaris).
   - #1184691 : iometer-2004.07.30-post.Ming008LoginWarning.patch by
     Ming Zhang (Minor patch that adds an additional warning during
     the login process).
   - #1088711 : iometer-2004.07.30-post.Andy001BugFixFor1088486.patch
     by Andy Currid (Implements a bug fix in regards to IO completions -
     see bug report #1088486).
   - #1184671 : iometer-2004.07.30-post.Ming006ParseParamStruct.patch
     by Ming Zhang (Patch that introduces the dynamo_param structure
     which contains the arguments given to the dynamo executable).
   - #1184668 : iometer-2004.07.30-post.Thayne001NetwareFollowUp.patch
     by Thayne Harmon (Significant patch applying some adjustments as