@@ -190,13 +190,13 @@ find important global defines (-D<key>[=<value>]):
 
    This are global defines to identify the Processor / CPU itself: 
    IOMTR_CPU_ALPHA           Alpa CPU (Digital->Compaq->HP) *
-   IOMTR_CPU_X86_64          AMD x86 with 64 bit extention (Opteron) and
-                             Intel Xeon with EM64T
    IOMTR_CPU_I386            Intel x86 processors (32 bit)
    IOMTR_CPU_IA64            Intel Itanium family (64 bit)
    IOMTR_CPU_MIPS            MIPS CPU (used in SGI machines etc.) *
    IOMTR_CPU_SPARC           Sun Sparc processor (64 bit)
-   IOMTR_CPU_XSCALE          Intel XScale processor *
+   IOMTR_CPU_X86_64          AMD x86 with 64 bit extention and
+                             Intel Xeon with EM64T
+   IOMTR_CPU_XSCALE          Intel XScale processor
     
    * = Not yet implemented / supported.
 
@@ -206,7 +206,20 @@ find important global defines (-D<key>[=<value>]):
    active by default. Such parts of the code can be dangerous or require
    non standard libraries: 
    
-   IOMTR_SETTING_OVERRIDE_FS   DANGER! - Additional code for dynamo, which
+   IOMTR_SETTING_CPU_AFFINITY  Enables the CPU affinity support within the
+                               coding - currently supported on Linux and
+			       Windows only (on other platforms this code
+			       does nothing).
+   IOMTR_SETTING_GCC_M64       The GCC compiler used for Linux builds have
+                               a (GCC) build time option to make pointers
+                               and longs 64 bits. Useful only on 64 bit
+                               operating systems.
+   IOMTR_SETTING_KSTAT_PERCPU  For the Linux kernel module. The kstat kernel
+                               structure in some smp Linux version use an
+                               alternative structure called 'percpu'.
+   IOMTR_SETTING_NO_CPU_KHZ    For the Linux kernel module. A few non i386
+                               kernels don't export cpu_khz.
+   IOMTR_SETTING_OVERRIDE_FS   DANGER!!! - Additional code for dynamo, which
                                allows it to use a (not mounted) file system
 			       partitions as target. Please notice that
 			       this destroys the file system and overwrites
@@ -218,16 +231,6 @@ find important global defines (-D<key>[=<value>]):
 			       IOMTR_SETTING_OVERRIDE_FS
    IOMTR_SETTING_VI_SUPPORT    Adds VI (Virtual Interface Architecture)
                                support to the dynamo executable.   
-   IOMTR_SETTING_GCC_M64       The GCC compiler used for Linux builds have
-                               a (GCC) build time option to make pointers
-                               and longs 64 bits. Useful only on 64 bit
-                               operating systems.
-   IOMTR_SETTING_KSTAT_PERCPU  For the Linux kernel module. The kstat kernel
-                               structure in some smp Linux version use an
-                               alternative structure called 'percpu'.
-   IOMTR_SETTING_NO_CPU_KHZ    For the Linux kernel module. A few non i386
-                               kernels don't export cpu_khz.
-
 
  o IOMTR_MACRO_...
  
