@@ -22,6 +22,81 @@
 
   <table border="0" cellpadding="5" cellspacing="0">
     <tr>
+      <td class="tdh">2005.mm.dd</td>
+    </tr>
+    <tr>
+      <td class="block">
+      <!-- ---------------------------------------------------------------- -->
+      <table class="inner" border="1" cellpadding="2" cellspacing="3">
+        <tr>
+	  <td class="block"></td>
+	  <td class="block">I386</td>
+	  <td class="block">IA64</td>
+	  <td class="block">PowerPC (455)</td>
+	  <td class="block">SPARC</td>
+	  <td class="block">XScale (IOP321, IOP331)</td>	  
+	  <td class="block">X86-64 (AMD, Intel)</td>	  
+	</tr>
+        <tr>
+	  <td class="block">Linux</td>
+          <td class="block"><li>Debian 3.0 (2.4.18 kernel, gcc 2.95.4, glibc 2.2.5),</li>
+	                    <li>Red Hat 9 (2.4.20 kernel, gcc 3.2, glibc 2.3.2 with NPTL)*,</li>
+ 	                    <li>Red Hat 8.0 (2.4.18 kernel, gcc 3.2, glibc 2.2.93),</li>
+                            <li>SuSE 8.1 (2.4.19 kernel, gcc 3.2, glibc 2.2.5),</li></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><li>(2.4.20 kernel)</li></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><li>(2.6.x kernel - with ARMLinux patch, XScale patch, and CCNT patch)</li></td>
+	  <td class="block"><i>should work</i></td>
+	</tr>
+        <tr>
+	  <td class="block">Netware</td>
+	  <td class="block"><li>NetWare 6.5 all SP's (MetroWorks 7.0, NetWare SDK 4.0, libc July 30,2003),</li>
+			    <li>NetWare 6.0 all SP's (MetroWorks 7.0, NetWare SDK 4.0, libc July 30,2003)</li></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><i>not supported</i></td>
+  	  <td class="block"><i>not supported</i></td>
+	</tr>
+        <tr>
+	  <td class="block">Solaris</td>
+	  <td class="block"><i>should work</i></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><li>Solaris 9 (gcc 3.3.2)</li>
+	                    <li>Solaris 8 (gcc 2.95.3)</li></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><i>not supported</i></td>
+	</tr>
+        <tr>
+	  <td class="block">Windows</td>
+	  <td class="block"><li>Windows XP Pro (MSVC++ .NET),</li>
+	                    <li>Windows 2000 (MSVC++ 6.0),</li>
+	                    <li>Windows NT 4 (MSVC++ 6.0)</li></td>
+	  <td class="block"><li>Windows XP (WIN2003 DDK),</li>
+	                    <li>Windows 2003 (WIN2003 DDK)</li></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><i>not supported</i></td>
+	  <td class="block"><i>should work</i></td>
+	</tr>
+      </table>
+      <!-- ---------------------------------------------------------------- -->      
+      </td>
+    </tr>
+  </table>
+
+  <p class="desc">List of known combinations for version 2004.nn.nn
+  (&quot;<i>should work</i>&quot; means, that this combination is
+  expected to work, but wasn't confirmed so far - if you have access
+  to such a system please let us know).<br>
+  * = To get the job done, please consult the Know Issues page
+  [<a href="issues.html">here</a>]
+  first!<br><br></p>
+
+  <table border="0" cellpadding="5" cellspacing="0">
+    <tr>
       <td class="tdh">2004.07.30</td>
     </tr>
     <tr>
